--- a/Surface-Project/Surface-UI/src/index.html
+++ b/Surface-Project/Surface-UI/src/index.html
@@ -12,5 +12,6 @@
 </head>
 <body class="container-fluid">
   <app-root></app-root>
+  <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
 </body>
 </html>
